@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2014 Red Hat, Inc. and/or its affiliates.
+ * Copyright (c) 2014-2018 Red Hat, Inc. and/or its affiliates.
  *
  * This program and the accompanying materials are made
  * available under the terms of the Eclipse Public License 2.0
@@ -104,7 +104,7 @@ public class XmlItemReader extends XmlItemReaderWriterBase implements ItemReader
         }
         super.initXmlFactory();
         if (inputDecorator != null) {
-            xmlFactory.setInputDecorator((InputDecorator) inputDecorator.newInstance());
+            xmlFactory.setInputDecorator((InputDecorator) inputDecorator.getDeclaredConstructor().newInstance());
         }
 
         fromXmlParser = (FromXmlParser) xmlFactory.createParser(getInputStream(resource, false));
